changed profile-pic size

--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
 }
 
 #profile-pic {
-    height: 100px;
+    height: 30rem;
     width: auto;
     border-radius: 50%;
     border: 2px solid white;
