--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
 }
 
 #profile-pic {
-    height: 40rem;
+    height: 350px;
     width: auto;
     border-radius: 50%;
     border: 2px solid white;
