--- a/style.css
+++ b/style.css
@@ -15,16 +15,13 @@ body {
 
 
 .container {
+    width: 60%;
+    max-width: 600px;
+    min-width: 400px;
     padding: 1rem;
-    text-align: center;
 }
 
-#profile-pic {
-    height: 20rem;
-    width: auto;
-    border-radius: 50%;
-    border: 2px solid white;
-}
+
 
 .social-media-row {
     width: 100%;
@@ -48,4 +45,41 @@ h1 {
 
 hr {
     margin: 4px 0 12px 0;
+}
+
+.image-container {
+    position: relative;
+    max-width: 400px;
+    margin: 0 20%;
+}
+
+#profile-pic {
+    width: 100%;
+    height: 100%;
+    max-width: 400px;
+    /*border-radius: 50%;*/
+    /*border: 2px solid white;*/
+    /*animation: spin 10s infinite reverse ease;*/
+    border-radius: 50%;
+}
+
+.image-border {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    max-width: 400px;
+    border-radius: 50%;
+    border-top: 2px dashed #fffff;
+    border-right: 2px dashed #ffffff;
+    border-left: 2px dashed #ffffff;
+    border-bottom: 2px dashed #fffff;
+    padding: 0px;
+    margin: 0px;
+    animation: spin 10s infinite ease;
+}
+
+@keyframes spin {
+    100% {
+        transform: rotate(1turn);
+    }
 }
