--- a/style.css
+++ b/style.css
@@ -50,16 +50,13 @@ hr {
 .image-container {
     position: relative;
     max-width: 400px;
-    margin: 0 20%;
+    margin: 0 auto;
 }
 
 #profile-pic {
     width: 100%;
     height: 100%;
     max-width: 400px;
-    /*border-radius: 50%;*/
-    /*border: 2px solid white;*/
-    /*animation: spin 10s infinite reverse ease;*/
     border-radius: 50%;
 }
 
