--- a/style.css
+++ b/style.css
@@ -50,7 +50,8 @@ hr {
 .image-container {
     position: relative;
     max-width: 400px;
-    margin: 0 auto;
+    margin: 0 auto 10px auto;
+    
 }
 
 #profile-pic {
@@ -72,11 +73,32 @@ hr {
     border-bottom: 2px dashed #fffff;
     padding: 0px;
     margin: 0px;
-    animation: spin 10s infinite ease;
+    animation: spin 6s infinite ease-in-out;
+    
 }
 
 @keyframes spin {
     100% {
         transform: rotate(1turn);
     }
+}
+
+.name{
+    margin-bottom: 10px;
+}
+
+.information-element img {
+    width: 1.8rem;
+    padding: 0 5px 0 0;
+}
+
+.information-element {
+    
+    font-size: 1.4rem;
+    padding: 0 0 0.5rem 0;
+}
+
+.information-element a {
+    color: white;
+    text-decoration: none;
 }
