--- a/style.css
+++ b/style.css
@@ -1,20 +1,29 @@
-html, body {
-    height: 100%;
-    width: 100%;
-}
-
 body {
+    min-height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
     color: white;
     font-family: 'Roboto', sans-serif;
-    text-align: center;
     background: black;
+    flex-direction: column;
 }
 
 
-.container {
+footer a{
+    font-size: 15px;
+}
+
+
+.impressum-container{
+    display: inline;
+    width: 60%;
+    min-width: 400px;
+    padding: 1rem;
+}
+
+.profile-container {
+    text-align: center;
     width: 60%;
     max-width: 600px;
     min-width: 400px;
@@ -101,4 +110,8 @@ hr {
 .information-element a {
     color: white;
     text-decoration: none;
+}
+
+a {
+    color: turquoise;
 }
