--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
-    min-height: 100vh;
+    height: 100vh;
+    width: 100vw;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -26,7 +27,7 @@ footer a{
     text-align: center;
     width: 60%;
     max-width: 600px;
-    min-width: 400px;
+    min-width: 500px;
     padding: 1rem;
 }
 
@@ -41,9 +42,13 @@ footer a{
 }
 
 .social-media-row img {
-    height: 4rem;
-    width: 4rem;
+    height: 3rem;
+    width: 3rem;
     fill: white;
+}
+
+.social-media-row img:hover{
+    filter: invert(100%);
 }
 
 h1 {
@@ -58,7 +63,7 @@ hr {
 
 .image-container {
     position: relative;
-    max-width: 400px;
+    max-width: 350px;
     margin: 0 auto 10px auto;
     
 }
@@ -66,7 +71,7 @@ hr {
 #profile-pic {
     width: 100%;
     height: 100%;
-    max-width: 400px;
+    max-width: 350px;
     border-radius: 50%;
 }
 
@@ -74,7 +79,7 @@ hr {
     position: absolute;
     width: 100%;
     height: 100%;
-    max-width: 400px;
+    max-width: 350px;
     border-radius: 50%;
     border-top: 2px dashed #fffff;
     border-right: 2px dashed #ffffff;
