--- a/style.css
+++ b/style.css
@@ -1,5 +1,14 @@
 html{
-    min-height: 100%;
+    height: 100%;
+    width: 100%;
+    /* Hide scrollbar for IE, Edge and Firefox */
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+    scroll-behavior: smooth;
+}
+
+::-webkit-scrollbar { /* Hide scrollbar for Chrome, Safari and Opera */
+    display: none;
 }
 
 body {
@@ -10,13 +19,36 @@ body {
     font-family: 'Roboto', sans-serif;
     background: black;
     flex-direction: column;
-    min-height: 100vh;
+
+}
+
+.landing-view{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    width: 100%;
+}
+
+.detail-view{
+    margin: 20px 0;
+    max-width: 600px;
+    padding: 0 30px;
+    min-height: calc(100vh - 64px);
+}
+
+.detail-view h2{
+    text-align: center;
+}
+
+.detail-view p{
+    text-align: justify;
 }
 
 .impressum-container{
     max-width: 1000px;
     height: 100%;
-    margin: 40px 20px;
+    margin: 20px 20px 0 20px;
 }
 
 .profile-container {
@@ -53,7 +85,7 @@ h1 {
     font-size: 2.2rem;
 }
 
-hr {
+.landing-view hr {
     margin: 14px 0 22px 0;
 }
 
@@ -107,21 +139,58 @@ hr {
     padding: 0 0 0.5rem 0;
 }
 
-.information-element a {
+a {
     color: white;
     text-decoration: none;
 }
 
-a {
-    color: turquoise;
-}
 
 
 footer{
-    margin-top: 10px;
+    margin: 10px 0;
 }
 
 
 footer a{
     font-size: 15px;
+    color: turquoise;
+    text-decoration: underline;
+}
+
+.scroll-down-link img{
+    width: 40px;
+    height: 40px;
+}
+
+.scroll-down-link {
+    cursor:pointer;
+	margin: 0px 0 0 -20px;
+	position: absolute;
+	left: 50%;
+	bottom: 0px;
+	color: #FFF;
+	z-index: 100;
+	text-decoration: none;
+	text-shadow: 0px 0px 3px rgba(0, 0, 0, 0.4);
+	-webkit-animation: ca3_fade_move_down 2s ease-in-out infinite;
+	-moz-animation:    ca3_fade_move_down 2s ease-in-out infinite;
+	animation:         ca3_fade_move_down 2s ease-in-out infinite;
+}
+
+
+/*animated scroll arrow animation*/
+@-webkit-keyframes ca3_fade_move_down {
+  0%   { -webkit-transform:translate(0,-20px); opacity: 0;  }
+  50%  { opacity: 1;  }
+  100% { -webkit-transform:translate(0,0px); opacity: 0; }
+}
+@-moz-keyframes ca3_fade_move_down {
+  0%   { -moz-transform:translate(0,-20px); opacity: 0;  }
+  50%  { opacity: 1;  }
+  100% { -moz-transform:translate(0,0px); opacity: 0; }
+}
+@keyframes ca3_fade_move_down {
+  0%   { transform:translate(0,-20px); opacity: 0;  }
+  50%  { opacity: 1;  }
+  100% { transform:translate(0,0px); opacity: 0; }
 }
