--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ html{
     /* Hide scrollbar for IE, Edge and Firefox */
     -ms-overflow-style: none;  /* IE and Edge */
     scrollbar-width: none;  /* Firefox */
+    scroll-snap-type: y mandatory;
     scroll-behavior: smooth;
 }
 
@@ -19,7 +20,6 @@ body {
     font-family: 'Roboto', sans-serif;
     background: black;
     flex-direction: column;
-
 }
 
 .landing-view{
@@ -28,6 +28,7 @@ body {
     align-items: center;
     height: 100vh;
     width: 100%;
+    scroll-snap-align: start;
 }
 
 .detail-view{
@@ -35,6 +36,7 @@ body {
     max-width: 600px;
     padding: 0 30px;
     min-height: calc(100vh - 64px);
+    scroll-snap-align: start;
 }
 
 .detail-view h2{
