--- a/style.css
+++ b/style.css
@@ -26,7 +26,8 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    height: 100vh; /* Fallback for browsers that do not support Custom Properties */
+    height: calc(var(--vh, 1vh) * 100);
     width: 100%;
     scroll-snap-align: start;
 }
@@ -35,7 +36,8 @@ body {
     margin: 20px 0;
     max-width: 600px;
     padding: 0 30px;
-    min-height: calc(100vh - 64px);
+    min-height: 100vh;/* Fallback for browsers that do not support Custom Properties */
+    min-height: calc(var(--vh, 1vh) * 100 - 64px);
     scroll-snap-align: start;
 }
 
