--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 html{
-    height: 100%;
-    width: 100%;
     /* Hide scrollbar for IE, Edge and Firefox */
     -ms-overflow-style: none;  /* IE and Edge */
     scrollbar-width: none;  /* Firefox */
     overflow: hidden;
+    width: 100%;
+    height: 100%;
 }
 
 ::-webkit-scrollbar { /* Hide scrollbar for Chrome, Safari and Opera */
@@ -12,9 +12,9 @@ html{
 }
 
 body {
-    position: fixed;
     width: 100%;
     height: 100%;
+    position: fixed;
     color: white;
     background: black;
     font-family: 'Roboto', sans-serif;
@@ -24,18 +24,20 @@ body {
 }
 
 .content{
+    width: 100%;
+    height: 100%;
     display: flex;
-    justify-content: center;
     align-items: center;
     flex-direction: column;
+
 }
 
 .landing-view{
+    min-height: 100%;
+    min-width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
-    width: 100%;
     scroll-snap-align: start;
 }
 
@@ -43,7 +45,7 @@ body {
     margin: 20px 0;
     max-width: 600px;
     padding: 0 30px;
-    min-height: calc(100vh - 64px);
+    min-height: calc(100% - 64px);
     scroll-snap-align: start;
 }
 
