--- a/style.css
+++ b/style.css
@@ -18,9 +18,7 @@ body {
     color: white;
     background: black;
     font-family: 'Roboto', sans-serif;
-    overflow-y: auto;
-    scroll-snap-type: y mandatory;
-    scroll-behavior: smooth;
+    
 }
 
 .content{
@@ -29,7 +27,10 @@ body {
     display: flex;
     align-items: center;
     flex-direction: column;
-
+    overflow-y: auto;
+    scroll-snap-type: y mandatory;
+    scroll-behavior: smooth;
+    position: relative;
 }
 
 .landing-view{
@@ -155,12 +156,9 @@ a {
     text-decoration: none;
 }
 
-
-
 footer{
     margin: 10px 0;
 }
-
 
 footer a{
     font-size: 15px;
@@ -187,7 +185,6 @@ footer a{
 	-moz-animation:    ca3_fade_move_down 2s ease-in-out infinite;
 	animation:         ca3_fade_move_down 2s ease-in-out infinite;
 }
-
 
 /*animated scroll arrow animation*/
 @-webkit-keyframes ca3_fade_move_down {
