--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ body {
 }
 
 .content{
-    width: 100%;
+    min-width: 100%;
     height: 100%;
     display: flex;
     align-items: center;
@@ -216,4 +216,26 @@ footer a{
   0%   { transform:translate(0,-20px); opacity: 0;  }
   50%  { opacity: 1;  }
   100% { transform:translate(0,0px); opacity: 0; }
+}
+
+#turn{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+@media screen and (max-width: 767px) and (orientation: landscape){
+    #turn{ display:flex; }
+    .content{ display:none; }
+}
+@media screen and (max-width: 767px) and (orientation: portrait){
+    #turn{ display:none; }
+    .content{ display:flex; }
+}
+
+@media only screen and (min-width: 768px) {
+    #turn{ display:none; }
+    .content{ display:flex; }
 }
