--- a/style.css
+++ b/style.css
@@ -226,16 +226,16 @@ footer a{
     align-items: center;
 }
 
-@media screen and (max-width: 767px) and (orientation: landscape){
+@media screen and (max-height: 700px) and (orientation: landscape){
     #turn{ display:flex; }
     .content{ display:none; }
 }
-@media screen and (max-width: 767px) and (orientation: portrait){
+@media screen and (orientation: portrait){
     #turn{ display:none; }
     .content{ display:flex; }
 }
 
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 700px) {
     #turn{ display:none; }
     .content{ display:flex; }
 }
