--- a/style.css
+++ b/style.css
@@ -45,18 +45,22 @@ body {
 .detail-view{
     margin: 20px 30px;
     max-width: 600px;
-    min-height: calc(100% - 64px);
+    min-height: 100%;
     scroll-snap-align: start;
     position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.last-detail-view{
+    min-height: calc(100% - 64px);
 }
 
 .detail-view h2{
     text-align: center;
 }
 
-.detail-view p{
-    text-align: justify;
-}
 
 .double-img{
     display: flex;
@@ -73,6 +77,26 @@ body {
     width: 100%;
 }
 
+.text-with-image{
+    display: flex;
+    align-items: center;
+    padding: 15px 0;
+}
+
+.text-with-image p{
+    width: 70%;
+    margin: auto;
+}
+
+.text-with-image a{
+    width: 20%;
+    margin: auto;
+}
+
+.text-with-image a img{
+    width: 100%;
+}
+
 .impressum-container{
     max-width: 1000px;
     margin: 20px 20px 0 20px;
@@ -85,6 +109,11 @@ body {
     min-width: 300px;
 }
 
+.profile-container a{
+    color: white;
+    text-decoration: none;
+}
+
 .social-media-row {
     width: 100%;
     display: flex;
@@ -93,9 +122,14 @@ body {
     align-items: center;
 }
 
+.social-media-row a{
+    width: 15%;
+    max-width: 70px;
+}
+
 .social-media-row img {
-    height: 3rem;
-    width: 3rem;
+    width: 100%;
+    height: 100%;
     fill: white;
 }
 
@@ -118,30 +152,26 @@ h1 {
 
 .image-container {
     position: relative;
-    max-width: 400px;
     margin: 0 auto 10px auto;
     overflow: hidden;
+    max-width: 400px;
 }
 
 #profile-pic {
     width: 100%;
     height: 100%;
-    max-width: 400;
     border-radius: 50%;
 }
 
-.image-border {
+#image-border {
     position: absolute;
     width: 100%;
     height: 100%;
-    max-width: 400px;
     border-radius: 50%;
     border-top: 2px dashed #fffff;
     border-right: 2px dashed #ffffff;
     border-left: 2px dashed #ffffff;
     border-bottom: 2px dashed #fffff;
-    padding: 0px;
-    margin: 0px;
     animation: spin 6s infinite ease-in-out;   
 }
 
@@ -167,8 +197,8 @@ h1 {
 }
 
 a {
-    color: white;
-    text-decoration: none;
+    color: turquoise;
+    text-decoration: underline;
 }
 
 footer{
@@ -218,20 +248,29 @@ footer a{
   100% { transform:translate(0,0px); opacity: 0; }
 }
 
-#turn{
+/*#turn{
     width: 100%;
     height: 100%;
-    display: flex;
+    display: none;
     justify-content: center;
     align-items: center;
-}
+}*/
 
 @media screen and (max-height: 700px) and (orientation: landscape){
-    #turn{ display:flex; }
-    .content{ display:none; }
+    /*#turn{ display:flex; }
+    .content{ display:none; }*/
+    .profile-container{max-width: 100%; width: 100%;}
+    .image-container{max-width: 150px;}
+    .social-media-row a{max-width: 40px;}
+    h1{font-size: 1.8rem;}
+    .information-element{font-size: 1rem;}
+    .information-element img{width: 1.5rem;}
+    .detail-view{max-width: 100%; font-size: 1rem; }
+    .detail-view a {max-width: 100px;}
+    .detail-view p { margin: 5px 0;}
+    .double-img{ display: none;}
+    .double-text{display: flex; align-items: center; margin-bottom: 10px;}
+    .double-text p{ max-width: 45%; margin: auto;}
+    
 }
 
-@media screen and (min-height: 700px) {
-    #turn{ display:none; }
-    .content{ display:flex; }
-}
