--- a/style.css
+++ b/style.css
@@ -248,18 +248,20 @@ footer a{
   100% { transform:translate(0,0px); opacity: 0; }
 }
 
-/*#turn{
+#turn{
     width: 100%;
     height: 100%;
     display: none;
     justify-content: center;
     align-items: center;
-}*/
+}
 
-@media screen and (max-height: 700px) and (orientation: landscape){
-    /*#turn{ display:flex; }
-    .content{ display:none; }*/
-    .profile-container{max-width: 100%; width: 100%;}
+@media screen and (max-height: 400px) and (orientation: landscape){
+    #turn{display: flex;}
+    .content{display: none;}
+}
+
+@media screen and (min-height: 400px) and (max-height: 700px) and (orientation: landscape){
     .image-container{max-width: 150px;}
     .social-media-row a{max-width: 40px;}
     h1{font-size: 1.8rem;}
@@ -271,6 +273,5 @@ footer a{
     .double-img{ display: none;}
     .double-text{display: flex; align-items: center; margin-bottom: 10px;}
     .double-text p{ max-width: 45%; margin: auto;}
-    
 }
 
