--- a/style.css
+++ b/style.css
@@ -5,6 +5,8 @@ html{
     overflow: hidden;
     width: 100%;
     height: 100%;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 300;
 }
 
 ::-webkit-scrollbar { /* Hide scrollbar for Chrome, Safari and Opera */
@@ -17,7 +19,6 @@ body {
     position: fixed;
     color: white;
     background: black;
-    font-family: 'Roboto', sans-serif;
     overflow: hidden;
 }
 
